--- a/src/App.css
+++ b/src/App.css
@@ -16,29 +16,30 @@ body {
 }
 
 .main-header {
+  padding-top: 20px;
   padding-bottom: 40px;
 }
 
 .container {
-  width: 40%;
-  position: absolute; 
-  top: 50%; 
-  left: 50%;
-  transform: translate(-50%, -55%);
+  width: 100%; /* Adjust the width as needed */
+  margin: 5% auto 10% auto; /* Center horizontally with 5% top and bottom margins */
   background-color: white;
   padding: 20px;
-  padding-left: 15%;
-  padding-right: 15%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .container h1 {
   text-align: center;
-  line-height: 1.5;
+  line-height: 1;
   margin: 0;
 }
 
 h1 {
+  font-size: 1.6em;
   font-weight: lighter;
   white-space: nowrap;
   overflow: hidden;
@@ -52,6 +53,10 @@ h1 {
   overflow: hidden;
   text-overflow: ellipsis;
   width: 100%;
+}
+
+.questions-form {
+  padding: 20px 60px;
 }
 
 button[type="submit"] {
