--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
   width: 100%;
   margin: 5% auto 10% auto;
   background-color: white;
-  padding: 20px;
+  padding: 20px 20px 10px 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
